various cosmetic changes primarily for mobile users - use px instead of em for sidebar media query (mobile browsers will scale the entire page down sometimes, resulting in lots of text fitting on screen, but it still being unsuitable for a sidebar. 1000px chosen because it's the default viewport width of tor browser) - add font-stretch: condensed; (does nothing for me but hopefully works for someone) - add spacing between entries in description lists (for everyone) - thicken alert border (to avoid rendering issues on mobile devices with low resolution) - add border-radius to alert (for everyone) - change alert colors so all alert types have roughly equal contrast (for everyone, but especially for oled screens with low gamma)

--- a/docs.css
+++ b/docs.css
@@ -2,7 +2,7 @@
 .docs-hidden {
 	display: none;
 }
-@media screen and (min-width: 60em) {
+@media screen and (min-width: 1000px) {
 	html {
 		height: 100%;
 	}
