--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ tt, code, kbd, samp {
 dd ol, dd dl, dd ul, dd menu {
 	margin: 0;
 }
+dt {
+	margin-top: 8px;
+}
 @media screen and (prefers-color-scheme: dark) {
 	:root {
 		background: black;
@@ -44,39 +47,41 @@ table, thead, tbody, tfoot, th, td {
 }
 
 .alert {
-	border: 1px solid currentcolor;
+	border: 2px solid currentcolor;
+	border-radius: 3px;
 	padding: 8px;
-	display: table;
 }
 .alert-warning {
 	background: #fed;
-	color: #730;
+	color: #520;
 }
 .alert-undocumented {
-	background: #ddd;
+	background: #eee;
+	color: #333;
 }
 .alert-removed {
 	background: #fdd;
-	color: #700;
+	color: #500;
 }
 .alert-added {
 	background: #dfd;
-	color: #030;
+	color: #040;
 }
 @media screen and (prefers-color-scheme: dark) {
 	.alert-warning {
-		background: #730;
+		background: #520;
 		color: #edc;
 	}
 	.alert-undocumented {
-		background: #222;
+		background: #333;
+		color: #eee;
 	}
 	.alert-removed {
-		background: #700;
+		background: #500;
 		color: #edd;
 	}
 	.alert-added {
-		background: #030;
+		background: #040;
 		color: #ded;
 	}
 }
